# handoff

./: CLAUDE.md  Makefile  README.EN.md  README.md  README.zh-CN.md  TODO.md  bump-version.md  pyproject.toml  readmev2.md
.github/workflows/: publish.yml
cli/: config.py  jsonl_viewer.py  main.py  tui.py
cli/commands/: list.py  run.py  tail.py
cli/skills/: handoff-ds.toml
cli/skills/handoff-codex/: SKILL.md
cli/skills/handoff-ds/: SKILL.md
cli/skills/handoff-opus/: SKILL.md
docs/: cli-reference.zh-CN.md  configuration.zh-CN.md  design.zh-CN.md
plans/archive/: ds-cli-tail-go-cli-commands-go-py-magical-toucan.md  readme-zh-cn-md-readme-md-screenshot-golden-church.md
plans/archive/handoff/: 00-overview.md  01-rename-packaging.md  04-config-split-env.md
plans/handoff/: 02-multi-backend.md  03-skills-docs-cleanup.md
scripts/: release.sh
