[project]
name = "handoff-cli"
version = "0.3.5"
description = "Multi coding-agent task dispatcher — a CLI proxy for claude that sends coding tasks to configurable AI backends"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6,<7",
    "textual>=2,<3",
]

[project.scripts]
handoff = "cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]

# Explicitly include data files that live inside the cli/ package directory.
# hatchling auto-includes all files under packages, but we list these for clarity.
# cli/backend_types.yaml and cli/user_config_template.yaml must be in the wheel.
# cli/skills/ contains 3 SKILL.md files + 1 Codex agent toml, auto-included by hatchling.
